# Hotel_Reservation_Forecasting

./: .gitignore  README.md  pyproject.toml
config/: config.yaml
data/processed/: H1_daily_records.parquet  H2_daily_records.parquet
notebooks/: clean_and_transform.ipynb  forecasting.ipynb
src/: __init__.py  data_loader.py  data_transformer.py  forecasting.py
